Add wiki or html tables as dataset sources

--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "32fa5271-f591-46da-aa72-0ee35974594d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "6a6ae439-3dd4-4bb5-a5fb-ea59f0e6401e",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "b5174c1a-2f50-4437-9050-ae2e7fbcb3c1",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "id": "6905eb0a-84f3-4462-944d-7f5e7fc1d31d",
    "metadata": {
     "tags": []
@@ -90,69 +90,220 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Time Span</th>\n",
-       "      <th>Etymology of name</th>\n",
+       "      <th>Eonothem/Eon</th>\n",
+       "      <th>Erathem/Era</th>\n",
+       "      <th>System/Period</th>\n",
+       "      <th>Series/Epoch</th>\n",
+       "      <th>Stage/Age</th>\n",
+       "      <th>Major events</th>\n",
+       "      <th>Start, million years ago[note 7]</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Phanerozoic</td>\n",
+       "      <td>Cenozoic[note 4]</td>\n",
        "      <td>Quaternary</td>\n",
-       "      <td>2.6 to 0 million years ago</td>\n",
-       "      <td>First introduced by Jules Desnoyers in 1829 fo...</td>\n",
+       "      <td>Holocene</td>\n",
+       "      <td>Meghalayan</td>\n",
+       "      <td>4.2-kiloyear event, Austronesian expansion, in...</td>\n",
+       "      <td>0.0042 *</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Neogene</td>\n",
-       "      <td>23 to 2.6 million years ago</td>\n",
-       "      <td>Derived from the Greek words νέος (néos) meani...</td>\n",
+       "      <td>Phanerozoic</td>\n",
+       "      <td>Cenozoic[note 4]</td>\n",
+       "      <td>Quaternary</td>\n",
+       "      <td>Holocene</td>\n",
+       "      <td>Northgrippian</td>\n",
+       "      <td>8.2-kiloyear event, Holocene climatic optimum....</td>\n",
+       "      <td>0.0082 *</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Paleogene</td>\n",
-       "      <td>66 to 23 million years ago</td>\n",
-       "      <td>Derived from the Greek words παλιός (palaiós) ...</td>\n",
+       "      <td>Phanerozoic</td>\n",
+       "      <td>Cenozoic[note 4]</td>\n",
+       "      <td>Quaternary</td>\n",
+       "      <td>Holocene</td>\n",
+       "      <td>Greenlandian</td>\n",
+       "      <td>Climate stabilizes. Current interglacial and H...</td>\n",
+       "      <td>0.0117 ± 0.000099 *</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Cretaceous</td>\n",
-       "      <td>145 to 66 million years ago</td>\n",
-       "      <td>Derived from Terrain Crétacé used in 1822 by J...</td>\n",
+       "      <td>Phanerozoic</td>\n",
+       "      <td>Cenozoic[note 4]</td>\n",
+       "      <td>Quaternary</td>\n",
+       "      <td>Pleistocene</td>\n",
+       "      <td>Upper/Late ('Tarantian')</td>\n",
+       "      <td>Eemian interglacial, last glacial period, endi...</td>\n",
+       "      <td>0.129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Jurassic</td>\n",
-       "      <td>201.3 to 145 million years ago</td>\n",
-       "      <td>Named after the Jura Mountains. Originally use...</td>\n",
+       "      <td>Phanerozoic</td>\n",
+       "      <td>Cenozoic[note 4]</td>\n",
+       "      <td>Quaternary</td>\n",
+       "      <td>Pleistocene</td>\n",
+       "      <td>Chibanian</td>\n",
+       "      <td>Mid-Pleistocene Transition occurs, high amplit...</td>\n",
+       "      <td>0.774 *</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Archean</td>\n",
+       "      <td>Neoarchean</td>\n",
+       "      <td>Stabilization of most modern cratons; possible...</td>\n",
+       "      <td>Stabilization of most modern cratons; possible...</td>\n",
+       "      <td>Stabilization of most modern cratons; possible...</td>\n",
+       "      <td>Stabilization of most modern cratons; possible...</td>\n",
+       "      <td>2800 [note 11]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>Archean</td>\n",
+       "      <td>Mesoarchean</td>\n",
+       "      <td>First stromatolites (probably colonial phototr...</td>\n",
+       "      <td>First stromatolites (probably colonial phototr...</td>\n",
+       "      <td>First stromatolites (probably colonial phototr...</td>\n",
+       "      <td>First stromatolites (probably colonial phototr...</td>\n",
+       "      <td>3200 [note 11]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>Archean</td>\n",
+       "      <td>Paleoarchean</td>\n",
+       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
+       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
+       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
+       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
+       "      <td>3600 [note 11]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>Archean</td>\n",
+       "      <td>Eoarchean</td>\n",
+       "      <td>First uncontroversial living organisms: at fir...</td>\n",
+       "      <td>First uncontroversial living organisms: at fir...</td>\n",
+       "      <td>First uncontroversial living organisms: at fir...</td>\n",
+       "      <td>First uncontroversial living organisms: at fir...</td>\n",
+       "      <td>4000 [note 11]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>Hadean[note 13]</td>\n",
+       "      <td>Formation of protolith of the oldest known roc...</td>\n",
+       "      <td>Formation of protolith of the oldest known roc...</td>\n",
+       "      <td>Formation of protolith of the oldest known roc...</td>\n",
+       "      <td>Formation of protolith of the oldest known roc...</td>\n",
+       "      <td>Formation of protolith of the oldest known roc...</td>\n",
+       "      <td>~4600 [note 11]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>117 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Name                       Time Span  \\\n",
-       "0  Quaternary      2.6 to 0 million years ago   \n",
-       "1     Neogene     23 to 2.6 million years ago   \n",
-       "2   Paleogene      66 to 23 million years ago   \n",
-       "3  Cretaceous     145 to 66 million years ago   \n",
-       "4    Jurassic  201.3 to 145 million years ago   \n",
+       "        Eonothem/Eon                                        Erathem/Era  \\\n",
+       "0        Phanerozoic                                   Cenozoic[note 4]   \n",
+       "1        Phanerozoic                                   Cenozoic[note 4]   \n",
+       "2        Phanerozoic                                   Cenozoic[note 4]   \n",
+       "3        Phanerozoic                                   Cenozoic[note 4]   \n",
+       "4        Phanerozoic                                   Cenozoic[note 4]   \n",
+       "..               ...                                                ...   \n",
+       "112          Archean                                         Neoarchean   \n",
+       "113          Archean                                        Mesoarchean   \n",
+       "114          Archean                                       Paleoarchean   \n",
+       "115          Archean                                          Eoarchean   \n",
+       "116  Hadean[note 13]  Formation of protolith of the oldest known roc...   \n",
        "\n",
-       "                                   Etymology of name  \n",
-       "0  First introduced by Jules Desnoyers in 1829 fo...  \n",
-       "1  Derived from the Greek words νέος (néos) meani...  \n",
-       "2  Derived from the Greek words παλιός (palaiós) ...  \n",
-       "3  Derived from Terrain Crétacé used in 1822 by J...  \n",
-       "4  Named after the Jura Mountains. Originally use...  "
+       "                                         System/Period  \\\n",
+       "0                                           Quaternary   \n",
+       "1                                           Quaternary   \n",
+       "2                                           Quaternary   \n",
+       "3                                           Quaternary   \n",
+       "4                                           Quaternary   \n",
+       "..                                                 ...   \n",
+       "112  Stabilization of most modern cratons; possible...   \n",
+       "113  First stromatolites (probably colonial phototr...   \n",
+       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
+       "115  First uncontroversial living organisms: at fir...   \n",
+       "116  Formation of protolith of the oldest known roc...   \n",
+       "\n",
+       "                                          Series/Epoch  \\\n",
+       "0                                             Holocene   \n",
+       "1                                             Holocene   \n",
+       "2                                             Holocene   \n",
+       "3                                          Pleistocene   \n",
+       "4                                          Pleistocene   \n",
+       "..                                                 ...   \n",
+       "112  Stabilization of most modern cratons; possible...   \n",
+       "113  First stromatolites (probably colonial phototr...   \n",
+       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
+       "115  First uncontroversial living organisms: at fir...   \n",
+       "116  Formation of protolith of the oldest known roc...   \n",
+       "\n",
+       "                                             Stage/Age  \\\n",
+       "0                                           Meghalayan   \n",
+       "1                                        Northgrippian   \n",
+       "2                                         Greenlandian   \n",
+       "3                             Upper/Late ('Tarantian')   \n",
+       "4                                            Chibanian   \n",
+       "..                                                 ...   \n",
+       "112  Stabilization of most modern cratons; possible...   \n",
+       "113  First stromatolites (probably colonial phototr...   \n",
+       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
+       "115  First uncontroversial living organisms: at fir...   \n",
+       "116  Formation of protolith of the oldest known roc...   \n",
+       "\n",
+       "                                          Major events  \\\n",
+       "0    4.2-kiloyear event, Austronesian expansion, in...   \n",
+       "1    8.2-kiloyear event, Holocene climatic optimum....   \n",
+       "2    Climate stabilizes. Current interglacial and H...   \n",
+       "3    Eemian interglacial, last glacial period, endi...   \n",
+       "4    Mid-Pleistocene Transition occurs, high amplit...   \n",
+       "..                                                 ...   \n",
+       "112  Stabilization of most modern cratons; possible...   \n",
+       "113  First stromatolites (probably colonial phototr...   \n",
+       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
+       "115  First uncontroversial living organisms: at fir...   \n",
+       "116  Formation of protolith of the oldest known roc...   \n",
+       "\n",
+       "    Start, million years ago[note 7]  \n",
+       "0                           0.0042 *  \n",
+       "1                           0.0082 *  \n",
+       "2                0.0117 ± 0.000099 *  \n",
+       "3                              0.129  \n",
+       "4                            0.774 *  \n",
+       "..                               ...  \n",
+       "112                   2800 [note 11]  \n",
+       "113                   3200 [note 11]  \n",
+       "114                   3600 [note 11]  \n",
+       "115                   4000 [note 11]  \n",
+       "116                  ~4600 [note 11]  \n",
+       "\n",
+       "[117 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tables[3].head()"
+    "tables[4]"
    ]
   },
   {
@@ -679,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "id": "5fc4bec9-f38d-45d3-8cfb-c4b0268a5db1",
    "metadata": {},
    "outputs": [],
@@ -693,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "id": "fa8c7a92-3a0e-457a-9270-5707fcba3d95",
    "metadata": {},
    "outputs": [],
@@ -703,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "id": "ee3193ca-af17-4faa-8119-93f002a70d97",
    "metadata": {},
    "outputs": [
@@ -713,7 +864,7 @@
        "array([37.4, 57.1, 89. , ..., 40. , 27. , 28.7])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "id": "f1d07e30-3faf-44f2-af97-4882865ced25",
    "metadata": {},
    "outputs": [],
@@ -734,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "id": "87570714-a46b-4a7a-bfb0-32df3b8b1c79",
    "metadata": {},
    "outputs": [
@@ -744,7 +895,7 @@
        "17.553569739952717"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "id": "e31a53e5-85da-423d-b33e-c9d5ea129852",
    "metadata": {},
    "outputs": [],
@@ -768,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "id": "2bb28d24-631e-482b-802b-b06cfa1fcadf",
    "metadata": {},
    "outputs": [],
@@ -778,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "id": "0bbb81bb-2d24-4047-92c3-20a74de40fe0",
    "metadata": {},
    "outputs": [],
@@ -790,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 33,
    "id": "55f45fd0-9695-4d3b-bc39-4c9eecf91d9f",
    "metadata": {},
    "outputs": [],
@@ -800,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "id": "a5121968-0c17-4992-a32c-1def16c1eab9",
    "metadata": {},
    "outputs": [],
@@ -811,17 +962,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "id": "ed2109e7-df55-47e8-afee-b70515132808",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3c8b0c8a30>]"
+       "[<matplotlib.lines.Line2D at 0x7f1dcb7b0d00>]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -846,17 +997,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 38,
    "id": "c453a710-93d4-47e5-9dc1-a390a9960976",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3c8b107790>]"
+       "[<matplotlib.lines.Line2D at 0x7f1dcb62ce80>]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -882,17 +1033,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 39,
    "id": "5431309b-1066-4ddf-be63-ca17b1ad5817",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3c8aec0ee0>]"
+       "[<matplotlib.lines.Line2D at 0x7f1dcb691480>]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -917,17 +1068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 40,
    "id": "de494b63-7266-48e7-9c12-646d3b486197",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3c8afe6b60>]"
+       "[<matplotlib.lines.Line2D at 0x7f1dcb50d060>]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -955,6 +1106,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7752c815-b02d-48cd-8be8-ff486a0cf090",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc004f7c-f60c-4827-ae02-95b76ce4d1bd",
    "metadata": {},
    "outputs": [],
    "source": []
