--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
    "outputs": [
@@ -72,16 +72,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-17 16:00:33,186 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "2022-07-17 16:01:06,566 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
       "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  self.log.error(\"Transform {t[0]} isn't available!\")\n",
-      "2022-07-17 16:00:33,199 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-17 16:00:33,206 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-17 16:00:33,211 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-17 16:00:33,217 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-17 16:00:33,223 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
-      "2022-07-17 16:00:33,231 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-17 16:00:33,389 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n"
+      "2022-07-17 16:01:06,578 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-17 16:01:06,583 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-17 16:01:06,587 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-17 16:01:06,592 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-17 16:01:06,598 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-17 16:01:06,606 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-17 16:01:06,748 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n"
      ]
     }
    ],
@@ -91,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale'])"
+       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749'])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 101,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -137,65 +137,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Eonothem/Eon</th>\n",
-       "      <th>Erathem/Era</th>\n",
-       "      <th>System/Period</th>\n",
-       "      <th>Series/Epoch</th>\n",
-       "      <th>Stage/Age</th>\n",
-       "      <th>Major events</th>\n",
-       "      <th>Start, million years ago[note 7]</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>FracYear</th>\n",
+       "      <th>MonthlyMean</th>\n",
+       "      <th>StdDev</th>\n",
+       "      <th>ObsCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Phanerozoic</td>\n",
-       "      <td>Cenozoic[note 4]</td>\n",
-       "      <td>Quaternary</td>\n",
-       "      <td>Holocene</td>\n",
-       "      <td>Meghalayan</td>\n",
-       "      <td>4.2-kiloyear event, Austronesian expansion, in...</td>\n",
-       "      <td>0.0042 *</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1749.042</td>\n",
+       "      <td>96.7</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Phanerozoic</td>\n",
-       "      <td>Cenozoic[note 4]</td>\n",
-       "      <td>Quaternary</td>\n",
-       "      <td>Holocene</td>\n",
-       "      <td>Northgrippian</td>\n",
-       "      <td>8.2-kiloyear event, Holocene climatic optimum....</td>\n",
-       "      <td>0.0082 *</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1749.123</td>\n",
+       "      <td>104.3</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Phanerozoic</td>\n",
-       "      <td>Cenozoic[note 4]</td>\n",
-       "      <td>Quaternary</td>\n",
-       "      <td>Holocene</td>\n",
-       "      <td>Greenlandian</td>\n",
-       "      <td>Climate stabilizes. Current interglacial and H...</td>\n",
-       "      <td>0.0117 ± 0.000099 *</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1749.204</td>\n",
+       "      <td>116.7</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Phanerozoic</td>\n",
-       "      <td>Cenozoic[note 4]</td>\n",
-       "      <td>Quaternary</td>\n",
-       "      <td>Pleistocene</td>\n",
-       "      <td>Upper/Late ('Tarantian')</td>\n",
-       "      <td>Eemian interglacial, last glacial period, endi...</td>\n",
-       "      <td>0.129</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1749.288</td>\n",
+       "      <td>92.8</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Phanerozoic</td>\n",
-       "      <td>Cenozoic[note 4]</td>\n",
-       "      <td>Quaternary</td>\n",
-       "      <td>Pleistocene</td>\n",
-       "      <td>Chibanian</td>\n",
-       "      <td>Mid-Pleistocene Transition occurs, high amplit...</td>\n",
-       "      <td>0.774 *</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1749.371</td>\n",
+       "      <td>141.7</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -205,152 +199,81 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>Archean</td>\n",
-       "      <td>Neoarchean</td>\n",
-       "      <td>Stabilization of most modern cratons; possible...</td>\n",
-       "      <td>Stabilization of most modern cratons; possible...</td>\n",
-       "      <td>Stabilization of most modern cratons; possible...</td>\n",
-       "      <td>Stabilization of most modern cratons; possible...</td>\n",
-       "      <td>2800 [note 11]</td>\n",
+       "      <th>3277</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022.122</td>\n",
+       "      <td>59.7</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>1044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>Archean</td>\n",
-       "      <td>Mesoarchean</td>\n",
-       "      <td>First stromatolites (probably colonial phototr...</td>\n",
-       "      <td>First stromatolites (probably colonial phototr...</td>\n",
-       "      <td>First stromatolites (probably colonial phototr...</td>\n",
-       "      <td>First stromatolites (probably colonial phototr...</td>\n",
-       "      <td>3200 [note 11]</td>\n",
+       "      <th>3278</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022.204</td>\n",
+       "      <td>78.5</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>1277</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>Archean</td>\n",
-       "      <td>Paleoarchean</td>\n",
-       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
-       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
-       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
-       "      <td>Prokaryotic archaea (e.g. methanogens) and bac...</td>\n",
-       "      <td>3600 [note 11]</td>\n",
+       "      <th>3279</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2022.286</td>\n",
+       "      <td>84.1</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>1237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Archean</td>\n",
-       "      <td>Eoarchean</td>\n",
-       "      <td>First uncontroversial living organisms: at fir...</td>\n",
-       "      <td>First uncontroversial living organisms: at fir...</td>\n",
-       "      <td>First uncontroversial living organisms: at fir...</td>\n",
-       "      <td>First uncontroversial living organisms: at fir...</td>\n",
-       "      <td>4000 [note 11]</td>\n",
+       "      <th>3280</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.371</td>\n",
+       "      <td>96.5</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>Hadean[note 13]</td>\n",
-       "      <td>Formation of protolith of the oldest known roc...</td>\n",
-       "      <td>Formation of protolith of the oldest known roc...</td>\n",
-       "      <td>Formation of protolith of the oldest known roc...</td>\n",
-       "      <td>Formation of protolith of the oldest known roc...</td>\n",
-       "      <td>Formation of protolith of the oldest known roc...</td>\n",
-       "      <td>~4600 [note 11]</td>\n",
+       "      <th>3281</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022.453</td>\n",
+       "      <td>70.5</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>1219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>117 rows × 7 columns</p>\n",
+       "<p>3282 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Eonothem/Eon                                        Erathem/Era  \\\n",
-       "0        Phanerozoic                                   Cenozoic[note 4]   \n",
-       "1        Phanerozoic                                   Cenozoic[note 4]   \n",
-       "2        Phanerozoic                                   Cenozoic[note 4]   \n",
-       "3        Phanerozoic                                   Cenozoic[note 4]   \n",
-       "4        Phanerozoic                                   Cenozoic[note 4]   \n",
-       "..               ...                                                ...   \n",
-       "112          Archean                                         Neoarchean   \n",
-       "113          Archean                                        Mesoarchean   \n",
-       "114          Archean                                       Paleoarchean   \n",
-       "115          Archean                                          Eoarchean   \n",
-       "116  Hadean[note 13]  Formation of protolith of the oldest known roc...   \n",
+       "      Year  Month  FracYear  MonthlyMean  StdDev  ObsCount\n",
+       "0     1749      1  1749.042         96.7    -1.0        -1\n",
+       "1     1749      2  1749.123        104.3    -1.0        -1\n",
+       "2     1749      3  1749.204        116.7    -1.0        -1\n",
+       "3     1749      4  1749.288         92.8    -1.0        -1\n",
+       "4     1749      5  1749.371        141.7    -1.0        -1\n",
+       "...    ...    ...       ...          ...     ...       ...\n",
+       "3277  2022      2  2022.122         59.7    13.1      1044\n",
+       "3278  2022      3  2022.204         78.5    13.9      1277\n",
+       "3279  2022      4  2022.286         84.1    15.2      1237\n",
+       "3280  2022      5  2022.371         96.5    16.0      1250\n",
+       "3281  2022      6  2022.453         70.5    12.9      1219\n",
        "\n",
-       "                                         System/Period  \\\n",
-       "0                                           Quaternary   \n",
-       "1                                           Quaternary   \n",
-       "2                                           Quaternary   \n",
-       "3                                           Quaternary   \n",
-       "4                                           Quaternary   \n",
-       "..                                                 ...   \n",
-       "112  Stabilization of most modern cratons; possible...   \n",
-       "113  First stromatolites (probably colonial phototr...   \n",
-       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
-       "115  First uncontroversial living organisms: at fir...   \n",
-       "116  Formation of protolith of the oldest known roc...   \n",
-       "\n",
-       "                                          Series/Epoch  \\\n",
-       "0                                             Holocene   \n",
-       "1                                             Holocene   \n",
-       "2                                             Holocene   \n",
-       "3                                          Pleistocene   \n",
-       "4                                          Pleistocene   \n",
-       "..                                                 ...   \n",
-       "112  Stabilization of most modern cratons; possible...   \n",
-       "113  First stromatolites (probably colonial phototr...   \n",
-       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
-       "115  First uncontroversial living organisms: at fir...   \n",
-       "116  Formation of protolith of the oldest known roc...   \n",
-       "\n",
-       "                                             Stage/Age  \\\n",
-       "0                                           Meghalayan   \n",
-       "1                                        Northgrippian   \n",
-       "2                                         Greenlandian   \n",
-       "3                             Upper/Late ('Tarantian')   \n",
-       "4                                            Chibanian   \n",
-       "..                                                 ...   \n",
-       "112  Stabilization of most modern cratons; possible...   \n",
-       "113  First stromatolites (probably colonial phototr...   \n",
-       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
-       "115  First uncontroversial living organisms: at fir...   \n",
-       "116  Formation of protolith of the oldest known roc...   \n",
-       "\n",
-       "                                          Major events  \\\n",
-       "0    4.2-kiloyear event, Austronesian expansion, in...   \n",
-       "1    8.2-kiloyear event, Holocene climatic optimum....   \n",
-       "2    Climate stabilizes. Current interglacial and H...   \n",
-       "3    Eemian interglacial, last glacial period, endi...   \n",
-       "4    Mid-Pleistocene Transition occurs, high amplit...   \n",
-       "..                                                 ...   \n",
-       "112  Stabilization of most modern cratons; possible...   \n",
-       "113  First stromatolites (probably colonial phototr...   \n",
-       "114  Prokaryotic archaea (e.g. methanogens) and bac...   \n",
-       "115  First uncontroversial living organisms: at fir...   \n",
-       "116  Formation of protolith of the oldest known roc...   \n",
-       "\n",
-       "    Start, million years ago[note 7]  \n",
-       "0                           0.0042 *  \n",
-       "1                           0.0082 *  \n",
-       "2                0.0117 ± 0.000099 *  \n",
-       "3                              0.129  \n",
-       "4                            0.774 *  \n",
-       "..                               ...  \n",
-       "112                   2800 [note 11]  \n",
-       "113                   3200 [note 11]  \n",
-       "114                   3600 [note 11]  \n",
-       "115                   4000 [note 11]  \n",
-       "116                  ~4600 [note 11]  \n",
-       "\n",
-       "[117 rows x 7 columns]"
+       "[3282 rows x 6 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs['geologictimescale']"
+    "dfs['sunspotsmonthlymean1749']"
    ]
   },
   {
